--- a/index.html
+++ b/index.html
@@ -98,13 +98,17 @@
           </td>
           <td class="week1">
             <div>17</div>
-            <p>5 x 1 mi jog, 5 min rest</p>
-            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>5 x (1 mi jog, 5 min rest)</p>
+            <!-- <p>8:10 min/mi pace</p> -->
+            <p>2 x 40 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
           <td class="week1">
             <div>18</div>
-            <p></p>
+            <p>(800 m, 120 s rest), 2 x (400 m, 90 s rest), 4 x (200 m, 60 s rest), 2 x (400 m, 90 s rest), (800 m, 120 s rest)</p>
+            <!-- <p>8:10 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week1">
             <div>19</div>
