--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
           <td class="week1">
             <div>18</div>
             <p>(800 m, 120 s rest), 2 x (400 m, 90 s rest), 4 x (200 m, 60 s rest), 2 x (400 m, 90 s rest), (800 m, 120 s rest)</p>
-            <!-- <p>8:10 min/mi pace</p> -->
+            <!-- <p>800 m (2:49 min pace), 400 m (1:15 min pace), 400 m (1:19 min pace), 200 m (40 s pace), 200 m (33 s pace), 200 m (36 s pace), 200 m (37 s pace), 400 m (1:21 min pace), 400 m (1:25 min pace), 800 m (3:08 min pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
           <td class="week1">
             <div>19</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week1">
             <div>20</div>
-            <p></p>
+            <p>2 x 30 s Modified Abdominal Assault</p>
           </td>
           <td class="week1">
             <div>21</div>
