--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   
   <h2>Schedule</h2>
-  <ul class="row">
+  <ul class="row" id="scheduleRow">
     <div class="col-12 col-sm-4">
       <li id="thisWeek">Week 1: Jun 16 - Jun 22</li>
       <li>Week 2: Jun 23 - Jun 29</li>
