--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@
           </td>
           <td class="week1">
             <div>21</div>
-            <p></p>
+            <p>4 mi run</p>
+            <!-- <p>8:01 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week1">
             <div>22</div>
