Update for week

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <h2>Schedule</h2>
   <ul class="row" id="scheduleRow">
     <div class="col-12 col-sm-4">
-      <li id="thisWeek">Week 1: Jun 16 - Jun 22</li>
+      <li>Week 1: Jun 16 - Jun 22</li>
       <li>Week 2: Jun 23 - Jun 29</li>
-      <li>Week 3: Jun 30 - Jul 6</li>
+      <li id="thisWeek">Week 3: Jun 30 - Jul 6</li>
       <li>Week 4: Jul 7 - Jul 13</li>
       <li>Week 5: Jul 14 - Jul 20</li>
       <li>Week 6: Jul 21 - Jul 27</li>
@@ -127,20 +127,44 @@
           </td>
           <td class="week1">
             <div>22</div>
-            <p></p>
+            <p>Rest</p>
           </td>
         </tr>
         <tr>
-          <td class="week2">23</td>
-          <td class="week2">24</td>
-          <td class="week2">25</td>
-          <td class="week2">26</td>
-          <td class="week2">27</td>
-          <td class="week2">28</td>
-          <td class="week2">29</td>
+          <td class="week2">
+            <div>23</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>24</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>25</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>26</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>27</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>28</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week2">
+            <div>29</div>
+            <p>On Pause</p>
+          </td>
         </tr>
         <tr>
-          <td class="week3">30</td>
+          <td class="week3">
+            <div>30</div>
+            <p></p>
+          </td>
           <td class="otherMonth">1</td>
           <td class="otherMonth">2</td>
           <td class="otherMonth">3</td>
