--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <tr>
           <td class="week3">
             <div>30</div>
-            <p></p>
+            <p>On Pause</p>
           </td>
           <td class="otherMonth">1</td>
           <td class="otherMonth">2</td>
@@ -193,12 +193,33 @@
       <tbody>
         <tr>
           <td class="otherMonth">30</td>
-          <td class="week3">1</td>
-          <td class="week3">2</td>
-          <td class="week3">3</td>
-          <td class="week3">4</td>
-          <td class="week3">5</td>
-          <td class="week3">6</td>
+          <td class="week3">
+            <div>1</div>
+            <p>4 mi run, with breaks</p>
+            <!-- <p>10:14 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
+          </td>
+          <td class="week3">
+            <div>2</div>
+            <p></p>
+          </td>
+          <td class="week3">
+            <div>3</div>
+            <p></p>
+          </td>
+          <td class="week3">
+            <div>4</div>
+            <p></p>
+          </td>
+          <td class="week3">
+            <div>30</div>
+            <p>On Pause</p>
+          </td>
+          <td class="week3">
+            <div>30</div>
+            <p>On Pause</p>
+          </td>
         </tr>
         <tr>
           <td class="week4">7</td>
