--- a/index.html
+++ b/index.html
@@ -202,33 +202,60 @@
           </td>
           <td class="week3">
             <div>2</div>
-            <p></p>
+            <p>8 x (100 m strides, 20 s rest)</p>
+            <p>400 m</p>
+            <!-- <p>1:44 min pace</p> -->
+            <p>2 x 1 mi</p>
+            <!-- <p>1 mi (8:27 min/mi pace), 1 mi (8:08 min/mi pace)</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week3">
             <div>3</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week3">
             <div>4</div>
             <p></p>
           </td>
           <td class="week3">
-            <div>30</div>
-            <p>On Pause</p>
+            <div>5</div>
+            <p></p>
           </td>
           <td class="week3">
-            <div>30</div>
-            <p>On Pause</p>
+            <div>6</div>
+            <p></p>
           </td>
         </tr>
         <tr>
-          <td class="week4">7</td>
-          <td class="week4">8</td>
-          <td class="week4">9</td>
-          <td class="week4">10</td>
-          <td class="week4">11</td>
-          <td class="week4">12</td>
-          <td class="week4">13</td>
+          <td class="week4">
+            <div>7</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>8</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>9</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>10</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>11</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>12</div>
+            <p></p>
+          </td>
+          <td class="week4">
+            <div>13</div>
+            <p></p>
+          </td>
         </tr>
         <tr>
           <td class="week5">14</td>
