--- a/index.html
+++ b/index.html
@@ -216,11 +216,14 @@
           </td>
           <td class="week3">
             <div>4</div>
-            <p></p>
+            <p>Break</p>
           </td>
           <td class="week3">
             <div>5</div>
-            <p></p>
+            <p>3 mi run</p>
+            <!-- <p>8:06 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week3">
             <div>6</div>
