--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="col-12 col-sm-4">
       <li>Week 1: Jun 16 - Jun 22</li>
       <li>Week 2: Jun 23 - Jun 29</li>
-      <li id="thisWeek">Week 3: Jun 30 - Jul 6</li>
-      <li>Week 4: Jul 7 - Jul 13</li>
+      <li>Week 3: Jun 30 - Jul 6</li>
+      <li id="thisWeek">Week 4: Jul 7 - Jul 13</li>
       <li>Week 5: Jul 14 - Jul 20</li>
       <li>Week 6: Jul 21 - Jul 27</li>
     </div>
@@ -227,7 +227,7 @@
           </td>
           <td class="week3">
             <div>6</div>
-            <p></p>
+            <p>Rest</p>
           </td>
         </tr>
         <tr>
@@ -261,13 +261,34 @@
           </td>
         </tr>
         <tr>
-          <td class="week5">14</td>
-          <td class="week5">15</td>
-          <td class="week5">16</td>
-          <td class="week5">17</td>
-          <td class="week5">18</td>
-          <td class="week5">19</td>
-          <td class="week5">20</td>
+          <td class="week5">
+            <div>14</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>15</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>16</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>17</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>18</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>19</div>
+            <p></p>
+          </td>
+          <td class="week5">
+            <div>20</div>
+            <p></p>
+          </td>
         </tr>
         <tr>
           <td class="week6">21</td>
