--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
         <tr>
           <td class="week4">
             <div>7</div>
-            <p></p>
+            <p>10 mi run</p>
+            <!-- <p>7:59 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week4">
             <div>8</div>
