--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <p>8 x (100 m strides, 20 s rest)</p>
             <p>400 m</p>
             <!-- <p>1:44 min pace</p> -->
-            <p>2 x 1 mi</p>
+            <p>2 x 1 mi run</p>
             <!-- <p>1 mi (8:27 min/mi pace), 1 mi (8:08 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
@@ -240,11 +240,13 @@
           </td>
           <td class="week4">
             <div>8</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week4">
             <div>9</div>
-            <p></p>
+            <p>3 x (600 m, 200 m jog, 400 m, 200 m jog, 300 m, 200 m job, 200 m, 200 m job, 100 m, 400 m jog)</p>
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week4">
             <div>10</div>
@@ -427,7 +429,9 @@
                 <td class="week15">24</td>
                 <td class="week15">25</td>
                 <td class="week15">26</td>
-                <td class="week15">27</td>
+                <td class="raceDay">
+                  <div>27</div>
+                  <p>Run to Home Base 9k</p>
                 <td class="week15">28</td>
             </tr>
             <tr>
