Change id to class

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 <td class="week18">19</td>
             </tr>
             <tr>
-                <td id="raceDay">
+                <td class="raceDay">
                     <div>20</div>
                     <p>Baystate Marathon</p>
                 </td>
