--- a/index.html
+++ b/index.html
@@ -250,15 +250,18 @@
           </td>
           <td class="week4">
             <div>10</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week4">
             <div>11</div>
-            <p></p>
+            <p>(1 mi, 2:30 min rest), 2 x (800 m, 2:30 min rest), (1 mi, 2:30 min rest), 5 x 100 m stride turnarounds</p>
+            <!-- <p>1 mi (7:10 min pace), 800 m (3:30 min pace), 800 m (3:31 min pace), 1 mi (7:29 min pace)</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week4">
             <div>12</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week4">
             <div>13</div>
