--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <li>Week 1: Jun 16 - Jun 22</li>
       <li>Week 2: Jun 23 - Jun 29</li>
       <li>Week 3: Jun 30 - Jul 6</li>
-      <li id="thisWeek">Week 4: Jul 7 - Jul 13</li>
-      <li>Week 5: Jul 14 - Jul 20</li>
+      <li>Week 4: Jul 7 - Jul 13</li>
+      <li id="thisWeek">Week 5: Jul 14 - Jul 20</li>
       <li>Week 6: Jul 21 - Jul 27</li>
     </div>
     <div class="col-12 col-sm-4">
@@ -265,7 +265,7 @@
           </td>
           <td class="week4">
             <div>13</div>
-            <p></p>
+            <p>Rest</p>
           </td>
         </tr>
         <tr>
