--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
         <tr>
           <td class="week5">
             <div>14</div>
-            <p></p>
+            <p>7.1 mi run</p>
+            <!-- <p>8:29 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week5">
             <div>15</div>
