--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <li>Week 2: Jun 23 - Jun 29</li>
       <li>Week 3: Jun 30 - Jul 6</li>
       <li>Week 4: Jul 7 - Jul 13</li>
-      <li id="thisWeek">Week 5: Jul 14 - Jul 20</li>
-      <li>Week 6: Jul 21 - Jul 27</li>
+      <li>Week 5: Jul 14 - Jul 20</li>
+      <li id="thisWeek">Week 6: Jul 21 - Jul 27</li>
     </div>
     <div class="col-12 col-sm-4">
       <li>Week 7: Jul 28 - Aug 3</li>
@@ -265,7 +265,7 @@
           </td>
           <td class="week4">
             <div>13</div>
-            <p>Rest</p>
+            <p>None</p>
           </td>
         </tr>
         <tr>
@@ -278,36 +278,56 @@
           </td>
           <td class="week5">
             <div>15</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week5">
             <div>16</div>
-            <p></p>
+            <p>200 m jog, 8 x (400 m, 200 m jog)</p>
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week5">
             <div>17</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week5">
             <div>18</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="week5">
             <div>19</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="week5">
             <div>20</div>
-            <p></p>
+            <p>None</p>
           </td>
         </tr>
         <tr>
-          <td class="week6">21</td>
-          <td class="week6">22</td>
-          <td class="week6">23</td>
-          <td class="week6">24</td>
-          <td class="week6">25</td>
-          <td class="week6">26</td>
+          <td class="week6">
+            <div>21</div>
+            <p></p>
+          </td>
+          <td class="week6">
+            <div>22</div>
+            <p></p>
+          </td>
+          <td class="week6">
+            <div>23</div>
+            <p></p>
+          </td>
+          <td class="week6">
+            <div>24</div>
+            <p></p>
+          </td>
+          <td class="week6">
+            <div>25</div>
+            <p></p>
+          </td>
+          <td class="week6">
+            <div>26</div>
+            <p></p>
+          </td>
           <td class="raceDay">
             <div>27</div>
             <p>Run to Home Base 9k</p>
