Add 7/21 and fix

--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
         <tr>
           <td class="week4">
             <div>7</div>
-            <p>10 mi run</p>
-            <!-- <p>7:59 min/mi pace</p> -->
+            <p>8 mi run</p>
+            <!-- <p>9:59 min/mi pace</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -271,8 +271,8 @@
         <tr>
           <td class="week5">
             <div>14</div>
-            <p>7.1 mi run</p>
-            <!-- <p>8:29 min/mi pace</p> -->
+            <p>6 mi run</p>
+            <!-- <p>10:02 min/mi pace</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -283,6 +283,7 @@
           <td class="week5">
             <div>16</div>
             <p>200 m jog, 8 x (400 m, 200 m jog)</p>
+            <p>1.5 mi cooldown</p>
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -306,7 +307,10 @@
         <tr>
           <td class="week6">
             <div>21</div>
-            <p></p>
+            <p>6 mi</p>
+            <!-- <p>8:54 min/mi pace</p> -->
+            <p>2 x 30 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
           </td>
           <td class="week6">
             <div>22</div>
