--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <tr>
           <td class="week6">
             <div>21</div>
-            <p>6 mi</p>
+            <p>6 mi run</p>
             <!-- <p>8:54 min/mi pace</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
