--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <li>Week 3: Jun 30 - Jul 6</li>
       <li>Week 4: Jul 7 - Jul 13</li>
       <li>Week 5: Jul 14 - Jul 20</li>
-      <li id="thisWeek">Week 6: Jul 21 - Jul 27</li>
+      <li>Week 6: Jul 21 - Jul 27</li>
     </div>
     <div class="col-12 col-sm-4">
-      <li>Week 7: Jul 28 - Aug 3</li>
+      <li id="thisWeek">Week 7: Jul 28 - Aug 3</li>
       <li>Week 8: Aug 4 - Aug 10</li>
       <li>Week 9: Aug 11 - Aug 17</li>
       <li>Week 10: Aug 18 - Aug 24</li>
@@ -99,14 +99,14 @@
           <td class="week1">
             <div>17</div>
             <p>5 x (1 mi jog, 5 min rest)</p>
-            <!-- <p>8:10 min/mi pace</p> -->
+            <!-- <p>(8:10 min/mi pace)</p> -->
             <p>2 x 40 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
           <td class="week1">
             <div>18</div>
             <p>(800 m, 120 s rest), 2 x (400 m, 90 s rest), 4 x (200 m, 60 s rest), 2 x (400 m, 90 s rest), (800 m, 120 s rest)</p>
-            <!-- <p>800 m (2:49 min pace), 400 m (1:15 min pace), 400 m (1:19 min pace), 200 m (40 s pace), 200 m (33 s pace), 200 m (36 s pace), 200 m (37 s pace), 400 m (1:21 min pace), 400 m (1:25 min pace), 800 m (3:08 min pace)</p> -->
+            <!-- <p>(800 m (2:49 min pace), 400 m (1:15 min pace), 400 m (1:19 min pace), 200 m (40 s pace), 200 m (33 s pace), 200 m (36 s pace), 200 m (37 s pace), 400 m (1:21 min pace), 400 m (1:25 min pace), 800 m (3:08 min pace))</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -121,7 +121,7 @@
           <td class="week1">
             <div>21</div>
             <p>4 mi run</p>
-            <!-- <p>8:01 min/mi pace</p> -->
+            <!-- <p>(8:01 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -196,7 +196,7 @@
           <td class="week3">
             <div>1</div>
             <p>4 mi run, with breaks</p>
-            <!-- <p>10:14 min/mi pace</p> -->
+            <!-- <p>(10:14 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -204,9 +204,9 @@
             <div>2</div>
             <p>8 x (100 m strides, 20 s rest)</p>
             <p>400 m</p>
-            <!-- <p>1:44 min pace</p> -->
+            <!-- <p>(1:44 min pace)</p> -->
             <p>2 x 1 mi run</p>
-            <!-- <p>1 mi (8:27 min/mi pace), 1 mi (8:08 min/mi pace)</p> -->
+            <!-- <p>(1 mi (8:27 min/mi pace), 1 mi (8:08 min/mi pace))</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -221,7 +221,7 @@
           <td class="week3">
             <div>5</div>
             <p>3 mi run</p>
-            <!-- <p>8:06 min/mi pace</p> -->
+            <!-- <p>(8:06 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -234,7 +234,7 @@
           <td class="week4">
             <div>7</div>
             <p>8 mi run</p>
-            <!-- <p>9:59 min/mi pace</p> -->
+            <!-- <p>(9:59 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -255,7 +255,7 @@
           <td class="week4">
             <div>11</div>
             <p>(1 mi, 2:30 min rest), 2 x (800 m, 2:30 min rest), (1 mi, 2:30 min rest), 5 x 100 m stride turnarounds</p>
-            <!-- <p>1 mi (7:10 min pace), 800 m (3:30 min pace), 800 m (3:31 min pace), 1 mi (7:29 min pace)</p> -->
+            <!-- <p>(1 mi (7:10 min pace), 800 m (3:30 min pace), 800 m (3:31 min pace), 1 mi (7:29 min pace))</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -272,7 +272,7 @@
           <td class="week5">
             <div>14</div>
             <p>6 mi run</p>
-            <!-- <p>10:02 min/mi pace</p> -->
+            <!-- <p>(10:02 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -308,33 +308,34 @@
           <td class="week6">
             <div>21</div>
             <p>6 mi run</p>
-            <!-- <p>8:54 min/mi pace</p> -->
+            <!-- <p>(8:54 min/mi pace)</p> -->
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
           <td class="week6">
             <div>22</div>
-            <p></p>
+            <p>Rest</p>
           </td>
           <td class="week6">
             <div>23</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="week6">
             <div>24</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="week6">
             <div>25</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="week6">
             <div>26</div>
-            <p></p>
+            <p>None</p>
           </td>
           <td class="raceDay">
             <div>27</div>
             <p>Run to Home Base 9k</p>
+            <!-- <p>(45:31 min or 8:09 min/mi pace)</p> -->
           </td>
         </tr>
         <tr>
