--- a/index.html
+++ b/index.html
@@ -339,10 +339,24 @@
           </td>
         </tr>
         <tr>
-          <td class="week7">28</td>
-          <td class="week7">29</td>
-          <td class="week7">30</td>
-          <td class="week7">31</td>
+          <td class="week7">
+            <div>28</div>
+            <p>Rest</p>
+          </td>
+          <td class="week7">
+            <div>29</div>
+            <p>None</p>
+          </td>
+          <td class="week7">
+            <div>30</div>
+            <p>20 min jog</p>
+            <p>2 x 40 s Modified Abdominal Assault</p>
+            <p>Stretch</p>
+          </td>
+          <td class="week7">
+            <div>31</div>
+            <p>Rest</p>
+          </td>
           <td class="otherMonth">1</td>
           <td class="otherMonth">2</td>
           <td class="otherMonth">3</td>
@@ -371,9 +385,18 @@
                 <td class="otherMonth">29</td>
                 <td class="otherMonth">30</td>
                 <td class="otherMonth">31</td>
-                <td class="week7">1</td>
-                <td class="week7">2</td>
-                <td class="week7">3</td>
+                <td class="week7">
+                  <div>1</div>
+                  <p>None</p>
+                </td>
+                <td class="week7">
+                  <div>2</div>
+                  <p></p>
+                </td>
+                <td class="week7">
+                  <div>26</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week8">4</td>
