--- a/index.html
+++ b/index.html
@@ -391,21 +391,42 @@
                 </td>
                 <td class="week7">
                   <div>2</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week7">
-                  <div>26</div>
-                  <p></p>
+                  <div>3</div>
+                  <p>None</p>
                 </td>
             </tr>
             <tr>
-                <td class="week8">4</td>
-                <td class="week8">5</td>
-                <td class="week8">6</td>
-                <td class="week8">7</td>
-                <td class="week8">8</td>
-                <td class="week8">9</td>
-                <td class="week8">10</td>
+                <td class="week8">
+                  <div>4</div>
+                  <p>None</p>
+                </td>
+                <td class="week8">
+                  <div>5</div>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                </td>
+                <td class="week8">
+                  <div>6</div>
+                  <p></p>
+                </td>
+                <td class="week8">
+                  <div>7</div>
+                  <p></p>
+                </td>
+                <td class="week8">
+                  <div>8</div>
+                  <p></p>
+                </td>
+                <td class="week8">
+                  <div>9</div>
+                  <p></p>
+                </td>
+                <td class="week8">
+                  <div>10</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week9">11</td>
