--- a/index.html
+++ b/index.html
@@ -409,11 +409,15 @@
                 </td>
                 <td class="week8">
                   <div>6</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week8">
                   <div>7</div>
-                  <p></p>
+                  <p>13 min run</p>
+                  <p>Injuries aggravated</p>
+                  <p>30 min walk</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>Stretch</p>
                 </td>
                 <td class="week8">
                   <div>8</div>
