--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 </td>
                 <td class="week8">
                   <div>8</div>
-                  <p></p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
                 </td>
                 <td class="week8">
                   <div>9</div>
