--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class="col-12 col-sm-4">
       <li>Week 7: Jul 28 - Aug 3</li>
-      <li id="thisWeek">Week 8: Aug 4 - Aug 10</li>
-      <li>Week 9: Aug 11 - Aug 17</li>
+      <li>Week 8: Aug 4 - Aug 10</li>
+      <li id="thisWeek">Week 9: Aug 11 - Aug 17</li>
       <li>Week 10: Aug 18 - Aug 24</li>
       <li>Week 11: Aug 25 - Aug 31</li>
       <li>Week 12: Sep 1 - Sep 7</li>
@@ -425,21 +425,43 @@
                 </td>
                 <td class="week8">
                   <div>9</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week8">
                   <div>10</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
             </tr>
             <tr>
-                <td class="week9">11</td>
-                <td class="week9">12</td>
-                <td class="week9">13</td>
-                <td class="week9">14</td>
-                <td class="week9">15</td>
-                <td class="week9">16</td>
-                <td class="week9">17</td>
+                <td class="week9">
+                  <div>11</div>
+                  <p>32 min run</p>
+                  <p>Injuries aggravated</p>
+                </td>
+                <td class="week9">
+                  <div>12</div>
+                  <p></p>
+                </td>
+                <td class="week9">
+                  <div>13</div>
+                  <p></p>
+                </td>
+                <td class="week9">
+                  <div>14</div>
+                  <p></p>
+                </td>
+                <td class="week9">
+                  <div>15</div>
+                  <p></p>
+                </td>
+                <td class="week9">
+                  <div>16</div>
+                  <p></p>
+                </td>
+                <td class="week9">
+                  <div>17</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week10">18</td>
