--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </td>
                 <td class="week9">
                   <div>12</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week9">
                   <div>13</div>
