--- a/index.html
+++ b/index.html
@@ -444,15 +444,15 @@
                 </td>
                 <td class="week9">
                   <div>13</div>
-                  <p></p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
                 </td>
                 <td class="week9">
                   <div>14</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week9">
                   <div>15</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week9">
                   <div>16</div>
