--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 </td>
                 <td class="week9">
                   <div>16</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week9">
                   <div>17</div>
