--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="col-12 col-sm-4">
       <li>Week 7: Jul 28 - Aug 3</li>
       <li>Week 8: Aug 4 - Aug 10</li>
-      <li id="thisWeek">Week 9: Aug 11 - Aug 17</li>
-      <li>Week 10: Aug 18 - Aug 24</li>
+      <li>Week 9: Aug 11 - Aug 17</li>
+      <li id="thisWeek">Week 10: Aug 18 - Aug 24</li>
       <li>Week 11: Aug 25 - Aug 31</li>
       <li>Week 12: Sep 1 - Sep 7</li>
     </div>
@@ -460,17 +460,40 @@
                 </td>
                 <td class="week9">
                   <div>17</div>
-                  <p></p>
+                  <p>Assorted resistance band exercises</p>
                 </td>
             </tr>
             <tr>
-                <td class="week10">18</td>
-                <td class="week10">19</td>
-                <td class="week10">20</td>
-                <td class="week10">21</td>
-                <td class="week10">22</td>
-                <td class="week10">23</td>
-                <td class="week10">24</td>
+                <td class="week10">
+                  <div>18</div>
+                  <p>20 push-ups</p>
+                </td>
+                <td class="week10">
+                  <div>19</div>
+                  <p>5 pull-ups</p>
+                  <p>21 push-ups</p>
+                  <p>Assorted resistance band exercises</p>
+                </td>
+                <td class="week10">
+                  <div>20</div>
+                  <p></p>
+                </td>
+                <td class="week10">
+                  <div>21</div>
+                  <p></p>
+                </td>
+                <td class="week10">
+                  <div>22</div>
+                  <p></p>
+                </td>
+                <td class="week10">
+                  <div>23</div>
+                  <p></p>
+                </td>
+                <td class="week10">
+                  <div>24</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week11">25</td>
