--- a/index.html
+++ b/index.html
@@ -476,7 +476,10 @@
                 </td>
                 <td class="week10">
                   <div>20</div>
-                  <p></p>
+                  <p>6 pull-ups</p>
+                  <p>30 push-ups, 20 push-ups, 10 push-ups</p>
+                  <p>Assorted resistance band exercises</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
                 </td>
                 <td class="week10">
                   <div>21</div>
