--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 </td>
                 <td class="week9">
                   <div>16</div>
-                  <p>None</p>
+                  <p>Injuries evaluated</p>
                 </td>
                 <td class="week9">
                   <div>17</div>
@@ -483,7 +483,10 @@
                 </td>
                 <td class="week10">
                   <div>21</div>
-                  <p></p>
+                  <p>7 pull-ups</p>
+                  <p>31 push-ups</p>
+                  <p>Assorted resistance band exercises</p>
+                  <p>90 s plank</p>
                 </td>
                 <td class="week10">
                   <div>22</div>
