--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 </td>
                 <td class="week10">
                   <div>22</div>
-                  <p></p>
+                  <p>5 pull-ups</p>
                 </td>
                 <td class="week10">
                   <div>23</div>
