--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <li>Week 7: Jul 28 - Aug 3</li>
       <li>Week 8: Aug 4 - Aug 10</li>
       <li>Week 9: Aug 11 - Aug 17</li>
-      <li id="thisWeek">Week 10: Aug 18 - Aug 24</li>
-      <li>Week 11: Aug 25 - Aug 31</li>
+      <li>Week 10: Aug 18 - Aug 24</li>
+      <li id="thisWeek">Week 11: Aug 25 - Aug 31</li>
       <li>Week 12: Sep 1 - Sep 7</li>
     </div>
     <div class="col-12 col-sm-4">
@@ -494,21 +494,44 @@
                 </td>
                 <td class="week10">
                   <div>23</div>
-                  <p></p>
+                  <p>Kayaking</p>
                 </td>
                 <td class="week10">
                   <div>24</div>
-                  <p></p>
+                  <p>Paddleboarding</p>
+                  <p>40 push-ups</p>
                 </td>
             </tr>
             <tr>
-                <td class="week11">25</td>
-                <td class="week11">26</td>
-                <td class="week11">27</td>
-                <td class="week11">28</td>
-                <td class="week11">29</td>
-                <td class="week11">30</td>
-                <td class="week11">31</td>
+                <td class="week11">
+                  <div>25</div>
+                  <p>Walking</p>
+                </td>
+                <td class="week11">
+                  <div>26</div>
+                  <p>None</p>
+                </td>
+                <td class="week11">
+                  <div>27</div>
+                  <p>Assorted resistance band exercises</p>
+                  <p>45 push-ups</p>
+                </td>
+                <td class="week11">
+                  <div>28</div>
+                  <p></p>
+                </td>
+                <td class="week11">
+                  <div>29</div>
+                  <p></p>
+                </td>
+                <td class="week11">
+                  <div>30</div>
+                  <p></p>
+                </td>
+                <td class="week11">
+                  <div>31</div>
+                  <p></p>
+                </td>
             </tr>
         </tbody>
     </table>
