--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <li>Week 8: Aug 4 - Aug 10</li>
       <li>Week 9: Aug 11 - Aug 17</li>
       <li>Week 10: Aug 18 - Aug 24</li>
-      <li id="thisWeek">Week 11: Aug 25 - Aug 31</li>
-      <li>Week 12: Sep 1 - Sep 7</li>
+      <li>Week 11: Aug 25 - Aug 31</li>
+      <li id="thisWeek">Week 12: Sep 1 - Sep 7</li>
     </div>
     <div class="col-12 col-sm-4">
       <li>Week 13: Sep 8 - Sep 14</li>
@@ -521,11 +521,11 @@
                 </td>
                 <td class="week11">
                   <div>28</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week11">
                   <div>29</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week11">
                   <div>30</div>
@@ -533,7 +533,9 @@
                 </td>
                 <td class="week11">
                   <div>31</div>
-                  <p></p>
+                  <p>Assorted assisted pull-ups, incline push-ups, tricep pushdowns with rope attachment, ez-bar curls, push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
                 </td>
             </tr>
         </tbody>
@@ -556,13 +558,34 @@
         </thead>
         <tbody>
             <tr>
-                <td class="week12">1</td>
-                <td class="week12">2</td>
-                <td class="week12">3</td>
-                <td class="week12">4</td>
-                <td class="week12">5</td>
-                <td class="week12">6</td>
-                <td class="week12">7</td>
+                <td class="week12">
+                  <div>1</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>2</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>3</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>4</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>5</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>6</div>
+                  <p></p>
+                </td>
+                <td class="week12">
+                  <div>7</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week13">8</td>
