--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 </td>
                 <td class="week11">
                   <div>30</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week11">
                   <div>31</div>
