--- a/index.html
+++ b/index.html
@@ -529,13 +529,13 @@
                 </td>
                 <td class="week11">
                   <div>30</div>
-                  <p>None</p>
-                </td>
-                <td class="week11">
-                  <div>31</div>
                   <p>Assorted assisted pull-ups, incline push-ups, tricep pushdowns with rope attachment, ez-bar curls, push-ups</p>
                   <p>2 x 40 s Modified Abdominal Assault</p>
                   <p>90 s plank</p>
+                </td>
+                <td class="week11">
+                  <div>31</div>
+                  <p>None</p>
                 </td>
             </tr>
         </tbody>
@@ -560,11 +560,11 @@
             <tr>
                 <td class="week12">
                   <div>1</div>
-                  <p></p>
+                  <p>Physical therapy band exercises</p>
                 </td>
                 <td class="week12">
                   <div>2</div>
-                  <p></p>
+                  <p>Physical therapy band exercises</p>
                 </td>
                 <td class="week12">
                   <div>3</div>
