--- a/index.html
+++ b/index.html
@@ -568,15 +568,16 @@
                 </td>
                 <td class="week12">
                   <div>3</div>
-                  <p></p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week12">
                   <div>4</div>
-                  <p></p>
+                  <p>45 push-ups, 25 push-ups, 15 push-ups</p>
                 </td>
                 <td class="week12">
                   <div>5</div>
-                  <p></p>
+                  <p>40 push-ups, 5 x 10 push-ups</p>
+                  <p>2 x 90 s plank</p>
                 </td>
                 <td class="week12">
                   <div>6</div>
