--- a/index.html
+++ b/index.html
@@ -581,11 +581,15 @@
                 </td>
                 <td class="week12">
                   <div>6</div>
-                  <p></p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week12">
                   <div>7</div>
-                  <p></p>
+                  <p>1 hr elliptical</p>
+                  <p>1-to-6 pull-up pyramid</p>
+                  <p>2 x (1-to-10 push-up pyramid)</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
                 </td>
             </tr>
             <tr>
