--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <li>Week 9: Aug 11 - Aug 17</li>
       <li>Week 10: Aug 18 - Aug 24</li>
       <li>Week 11: Aug 25 - Aug 31</li>
-      <li id="thisWeek">Week 12: Sep 1 - Sep 7</li>
+      <li>Week 12: Sep 1 - Sep 7</li>
     </div>
     <div class="col-12 col-sm-4">
-      <li>Week 13: Sep 8 - Sep 14</li>
+      <li id="thisWeek">Week 13: Sep 8 - Sep 14</li>
       <li>Week 14: Sep 15 - Sep 21</li>
       <li>Week 15: Sep 22 - Sep 28</li>
       <li>Week 16: Sep 29 - Oct 5</li>
@@ -590,16 +590,39 @@
                   <p>2 x (1-to-10 push-up pyramid)</p>
                   <p>2 x 40 s Modified Abdominal Assault</p>
                   <p>90 s plank</p>
+                  <p>Physical therapy band exercises</p>
+                  <p>Stretch</p>
                 </td>
             </tr>
             <tr>
-                <td class="week13">8</td>
-                <td class="week13">9</td>
-                <td class="week13">10</td>
-                <td class="week13">11</td>
-                <td class="week13">12</td>
-                <td class="week13">13</td>
-                <td class="week13">14</td>
+                <td class="week13">
+                  <div>8</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>9</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>10</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>11</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>12</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>13</div>
+                  <p></p>
+                </td>
+                <td class="week13">
+                  <div>14</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week14">15</td>
